--- a/css/main.css
+++ b/css/main.css
@@ -706,6 +706,18 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal__input:focus, .modal__input:hover {
+  cursor: pointer;
+  outline: none;
+  border: 1px solid var(--background-accent);
+}
+
+.modal__input:focus ~ .modal__svg,
+.modal__input:hover ~ .modal__svg {
+  cursor: pointer;
+  fill: var(--background-accent);
+}
+
 .modal__area-comments {
   width: 448px;
   height: 120px;
@@ -719,8 +731,7 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__area-comments:focus,
-.modal__area-comments:hover {
+.modal__area-comments:focus, .modal__area-comments:hover {
   cursor: pointer;
   outline: none;
   border: 1px solid var(--background-accent);
@@ -732,19 +743,6 @@ img {
   left: 12px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-}
-
-.modal__input:focus,
-.modal__input:hover {
-  cursor: pointer;
-  outline: none;
-  border: 1px solid var(--background-accent);
-}
-
-.modal__input:focus ~ .modal__svg,
-.modal__input:hover ~ .modal__svg {
-  cursor: pointer;
-  fill: var(--background-accent);
 }
 
 .license-container {
@@ -775,9 +773,6 @@ img {
 }
 
 .modal__check {
-  /* -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none; */
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -790,18 +785,18 @@ img {
   overflow: hidden;
 }
 
-.checkbox-svg {
-  position: absolute;
-  left: 9px;
-  pointer-events: none;
-}
-
 .modal__check:checked + .checkbox-svg {
   background-image: url("../images/icon-check.svg");
   background-origin: border-box;
   background-size: contain;
   pointer-events: none;
   fill: var(--background-accent);
+}
+
+.checkbox-svg {
+  position: absolute;
+  left: 9px;
+  pointer-events: none;
 }
 
 .modal-send {
