--- a/sass/components/_feedback-form.scss
+++ b/sass/components/_feedback-form.scss
@@ -2,10 +2,11 @@
 
 .label-container {
   position: relative;
+  &:not(:first-child) {
+    margin-top: 28px;
+  }
 }
-.label-container:not(:first-child) {
-  margin-top: 28px;
-}
+
 .modal__label {
   position: absolute;
   top: -18px;
@@ -24,6 +25,17 @@
   box-sizing: border-box;
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
+  &:hover {
+    cursor: pointer;
+    outline: none;
+    border: 1px solid var(--background-accent);
+  }
+  &:focus ~ .modal__svg,
+  &:hover ~ .modal__svg {
+    cursor: pointer;
+    fill: var(--background-accent);
+  }
 }
 .modal__area-comments {
   width: 448px;
@@ -34,13 +46,14 @@
   box-sizing: border-box;
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
+  &:hover {
+    cursor: pointer;
+    outline: none;
+    border: 1px solid var(--background-accent);
+  }
 }
-.modal__area-comments:focus,
-.modal__area-comments:hover {
-  cursor: pointer;
-  outline: none;
-  border: 1px solid var(--background-accent);
-}
+
 .modal__svg {
   position: absolute;
   top: 50%;
@@ -48,17 +61,6 @@
   transform: translateY(-50%);
 }
 
-.modal__input:focus,
-.modal__input:hover {
-  cursor: pointer;
-  outline: none;
-  border: 1px solid var(--background-accent);
-}
-.modal__input:focus ~ .modal__svg,
-.modal__input:hover ~ .modal__svg {
-  cursor: pointer;
-  fill: var(--background-accent);
-}
 .license-container {
   position: relative;
   justify-content: center;
@@ -80,9 +82,6 @@
   color: var(--background-accent);
 }
 .modal__check {
-  /* -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none; */
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -93,19 +92,20 @@
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+  &:checked + .checkbox-svg {
+    background-image: url("../images/icon-check.svg");
+    background-origin: border-box;
+    background-size: contain;
+    pointer-events: none;
+    fill: var(--background-accent);
+  }
 }
 .checkbox-svg {
   position: absolute;
   left: 9px;
   pointer-events: none;
 }
-.modal__check:checked + .checkbox-svg {
-  background-image: url("../images/icon-check.svg");
-  background-origin: border-box;
-  background-size: contain;
-  pointer-events: none;
-  fill: var(--background-accent);
-}
+
 .modal-send {
   position: absolute;
   left: 50%;
