--- a/sass/components/_filter-btns.scss
+++ b/sass/components/_filter-btns.scss
@@ -5,10 +5,11 @@
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  &__item:not(:first-child) {
+    margin-left: 8px;
+  }
 }
-.filter-list__item:not(:first-child) {
-  margin-left: 8px;
-}
+
 .filter-list__btn {
   border: 0;
   border-radius: 4px;
@@ -22,14 +23,15 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    background: var(--text-accent-color);
+    color: var(--mainbackground);
+  }
 }
-.filter-list__btn:hover,
-.filter-list__btn:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  background: var(--text-accent-color);
-  color: var(--mainbackground);
-}
+
 .blue-btn {
   background: var(--text-accent-color);
   color: var(--mainbackground);
