--- a/sass/components/_portfolio-works-section.scss
+++ b/sass/components/_portfolio-works-section.scss
@@ -22,6 +22,20 @@
   margin-right: 30px;
   margin-bottom: 30px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__link:hover .portfolio-card__overlay {
+    transform: translateY(-100%);
+  }
+  &__link:hover,
+  &__link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
 .portfolio-card__thumb {
   position: relative;
@@ -45,20 +59,7 @@
 .portfolio-card__link {
   display: block;
 }
-.portfolio-card__link:hover .portfolio-card__overlay {
-  transform: translateY(-100%);
-}
-.portfolio-card__link:hover,
-.portfolio-card__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio-card:nth-child(3n) {
-  margin-right: 0;
-}
-.portfolio-card:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
+
 .portfolio-card__text-container {
   padding: 20px 24px;
   border-bottom: 1px solid #eeeeee;
